 - added support of encoding parameter for log[] and eventlog[] (Alexei)
 - fixed displaying of Japanese in the Latest Data (Alexei)
 - fixed maintenance of hosts (Alexei)
 - added support of remote agent control (Alexei)
 - support of storage of log files in UTF8 encoding (Alexei)
 - increased size of triggers.expression to 1023 (Alexei)

Changes for 1.4.6:

 - [ZBX-365] added support of long process names for proc.num and proc.mem, Linux 2.6 (Sasha)
 - [ZBX-78] fixed detection of net-snmp libs (Alexei)
 - [ZBX-348] fixed incorrect processing of large integer values for {ITEM.LASTVALUE} (Alexei)
 - [ZBX-337] added Oracle upgrade scripts (Sasha) 
 - [ZBX-301] fixes some typos (Artem)
 - [ZBX-310] fixes for PGSQL (Artem)
 - [ZBX-336] fixed vtext.php (Artem)

Changes for 1.4.5:

 - [ZBX-295] fixed processing of null values under Oracle. Thanks to Max Lapan. (Sasha)
 - [ZBX-340] Oracle related fixes. Thanks to Max Lapan. (Sasha)
 - [ZBX-294,ZBX-296] Oracle related fixes. Thanks to Max Lapan. (Sasha)
 - [ZBX-343] fixed possible hang of server trapper process (Alexei)
 - [ZBX-341] fixed compilation problem under Tru64/OSF (Alexei)
 - [ZBX-322] fixed possible incorrect autodiscovery (Sasha)
 - [ZBX-315] fixed server irregulary stop on OpenBSD (Sasha)
 - [ZBX-182] fixed processing of icmpping if dns name cannot be resolved (Sasha)
 - [ZBX-290] fixed possible server crash if host dns name is unknown (Sasha)
 - [ZBX-288] fixed compilation of the agent under Solaris 2.6 (Alexei)
 - [ZBX-287] fixed compilation under FreeBSD 4.1 with older GCC (Alexei)
 - [ZBX-277] fixed possible server crash when evaluating functions str(), regexp() and iregexp() (Alexei)
 - [ZBX-271] added support of system.boottime[] for OpenBSD & FreeBSD agents (Sasha)
 - [ZBX-268] added support of proc.num[], proc.mem[] & system.cpu.num[] for OpenBSD agents (Sasha)
 - [ZBX-263] fixed problem with saving of lastlogsize for log[] and eventlog[] items when history is set to 0 (Sasha)